# local-language-models

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  terminal_app.py
notebooks/: Local_LLMs_with_LMStudio.ipynb  Local_LLMs_with_Ollama.ipynb
